Change spacing and fix big ass buttons

--- a/.themes/oomox-Dark Yellowish/cinnamon/scss/_global.scss
+++ b/.themes/oomox-Dark Yellowish/cinnamon/scss/_global.scss
@@ -79,6 +79,6 @@ $info_bg_color: #6290C3;
 $roundness: 3px;
 
 // used for buttons, entrys, panel spacing, and menu item spacing.
-$spacing: 20px;
-$spacing_plus2: (20 + 2) + px;
+$spacing: 2px;
+$spacing_plus2: (2 + 2) + px;
 
